src/objects/AdPlan__c.object
<CustomObject>
    <description>Marketing plan for events</description>
    <fields>
        <fullName>AdPlanName__c</fullName>
        <label>Ad Plan Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdPlanNotRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Plan Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdPlanPartOfTour__c</fullName>
        <description>Indicator used in Wave to check if the Ad Plan/Event is part of the Tour</description>
        <formula>IF(NOT(ISBLANK( Tour__c )), TRUE, FALSE)</formula>
        <label>AdPlanPartOfTour?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdPlanTitle__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp; AdPlanName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Plan Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdPlanWithEvent__c</fullName>
        <description>True if Ad Plan is associated with an Event</description>
        <formula>IF(NOT(ISBLANK( Event__c )), TRUE, FALSE)</formula>
        <inlineHelpText>True if Ad Plan is associated with an Event</inlineHelpText>
        <label>AdPlan With Event?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Artists__c</fullName>
        <label>Artist(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CloseEnd__c</fullName>
        <label>Close End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloseStart__c</fullName>
        <label>Close Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrencyDate__c</fullName>
        <label>Currency Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyExchange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Exchange</label>
        <referenceTo>CurrencyExchange__c</referenceTo>
        <relationshipLabel>Ad Plans</relationshipLabel>
        <relationshipName>Ad_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DigitalDefaultCommission__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Digital Default Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DigitalSpendPercent__c</fullName>
        <formula>DigitalSpend__c / (LNESpend__c + TourSpend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Spend %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DigitalSpend__c</fullName>
        <label>Digital Spend</label>
        <summarizedField>Advertisement__c.NetCostToAdPlan__c</summarizedField>
        <summaryFilterItems>
            <field>Advertisement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Advertisement__c.HasNonLNEBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Advertisement__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Drives sharing rules to provide read-only access to other division members</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipName>AdPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventDate__c</fullName>
        <formula>IF(ISBLANK(Event__c),  StandaloneDate__c,  Event__r.EventLastDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <formula>Event__r.EventName__c</formula>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>AdPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExemptionReason__c</fullName>
        <label>Exemption Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstDate__c</fullName>
        <label>First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNEAPIID__c</fullName>
        <externalId>true</externalId>
        <label>LNE API ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNEAdPlanBudget__c</fullName>
        <label>LNE Ad Plan Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNESpend__c</fullName>
        <label>LNE Spend</label>
        <summarizedField>Advertisement__c.NetCostToAdPlan__c</summarizedField>
        <summaryFilterItems>
            <field>Advertisement__c.HasNonLNEBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Advertisement__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LastDate__c</fullName>
        <label>Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintenanceEnd__c</fullName>
        <label>Maintenance End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaintenanceStart__c</fullName>
        <label>Maintenance Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NonLNEBudget__c</fullName>
        <label>Non-LNE Budget</label>
        <summarizedField>NonLNEBudget__c.Budget__c</summarizedField>
        <summaryForeignKey>NonLNEBudget__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NonLNESpend__c</fullName>
        <label>Non-LNE Spend</label>
        <summarizedField>Advertisement__c.NetCostToAdPlan__c</summarizedField>
        <summaryFilterItems>
            <field>Advertisement__c.HasNonLNEBudget__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Advertisement__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OfficeName__c</fullName>
        <description>Drives sharing rules to provide edit access to other office members</description>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnSaleEnd__c</fullName>
        <label>On Sale End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OnSaleStart__c</fullName>
        <label>On Sale Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OutdoorDefaultCommission__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outdoor Default Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OutdoorSpendPercent__c</fullName>
        <formula>OutdoorSpend__c / (LNESpend__c + TourSpend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outdoor Spend %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OutdoorSpend__c</fullName>
        <label>Outdoor Spend</label>
        <summarizedField>Advertisement__c.NetCostToAdPlan__c</summarizedField>
        <summaryFilterItems>
            <field>Advertisement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Outdoor</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Advertisement__c.HasNonLNEBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Advertisement__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrimaryHeadlinerArtist__c</fullName>
        <description>Automatically populated via trigger on Deal and Event PB Flow</description>
        <label>Primary Headliner Artist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryVenueOffice__c</fullName>
        <description>Drives sharing rules to provide edit access to marketing members of the venue&apos;s primary office</description>
        <label>Primary Venue Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintDefaultCommission__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Print Default Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrintSpendPercent__c</fullName>
        <formula>PrintSpend__c / (LNESpend__c + TourSpend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Spend %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrintSpend__c</fullName>
        <label>Print Spend</label>
        <summarizedField>Advertisement__c.NetCostToAdPlan__c</summarizedField>
        <summaryFilterItems>
            <field>Advertisement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Print</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Advertisement__c.HasNonLNEBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Advertisement__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductionMiscellaneousSpendPercent__c</fullName>
        <formula>ProductionMiscellaneousSpend__c / (LNESpend__c + TourSpend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production/Miscellaneous Spend %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductionMiscellaneousSpend__c</fullName>
        <label>Production/Miscellaneous Spend</label>
        <summarizedField>Advertisement__c.NetCostToAdPlan__c</summarizedField>
        <summaryFilterItems>
            <field>Advertisement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Production/Miscellaneous</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Advertisement__c.HasNonLNEBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Advertisement__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PublicOnSale__c</fullName>
        <label>Public On Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseURL__c</fullName>
        <label>Purchase URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RadioDefaultCommission__c</fullName>
        <defaultValue>0.15</defaultValue>
        <label>Radio Default Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RadioSpendPercent__c</fullName>
        <formula>RadioSpend__c / (LNESpend__c + TourSpend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Radio Spend %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RadioSpend__c</fullName>
        <label>Radio Spend</label>
        <summarizedField>Advertisement__c.NetCostToAdPlan__c</summarizedField>
        <summaryFilterItems>
            <field>Advertisement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Radio</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Advertisement__c.HasNonLNEBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Advertisement__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingLNEBudget__c</fullName>
        <formula>LNEAdPlanBudget__c -  TotalLNESpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining LNE Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingNonLNEBudget__c</fullName>
        <formula>NonLNEBudget__c -  NonLNESpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Non-LNE Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_for_Currency_Recalc__c</fullName>
        <formula>IF 
( 
ISNULL(CurrencyExchange__c), 
TRUE, 
IF 
( 
ISNULL(CurrencyDate__c), 
IF 
( 
CurrencyExchange__r.IsCurrent__c = FALSE, 
TRUE, 
FALSE 
) , 
IF 
( 
AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = FALSE) , 
IF 
( 
AND(CurrencyExchange__r.StartDate__c &lt;= CurrencyDate__c, CurrencyExchange__r.EndDate__c &gt;= CurrencyDate__c), 
FALSE, 
TRUE 
) , 
IF 
( 
AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = TRUE), 
IF 
( 
(CurrencyExchange__r.StartDate__c &gt; CurrencyDate__c) = TRUE, 
TRUE, 
FALSE 
) , 
TRUE 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled for Currency Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StandaloneDate__c</fullName>
        <label>Standalone Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TVDefaultCommission__c</fullName>
        <defaultValue>0.15</defaultValue>
        <label>TV Default Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TelevisionSpendPercent__c</fullName>
        <formula>TelevisionSpend__c / (LNESpend__c + TourSpend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Television Spend %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TelevisionSpend__c</fullName>
        <label>Television Spend</label>
        <summarizedField>Advertisement__c.NetCostToAdPlan__c</summarizedField>
        <summaryFilterItems>
            <field>Advertisement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Television</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Advertisement__c.HasNonLNEBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Advertisement__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLNESpend__c</fullName>
        <formula>LNESpend__c + TourSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total LNE Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TourBudgetPercent__c</fullName>
        <label>Tour Budget %</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TourBudgetRemaining__c</fullName>
        <formula>TourBudget__c - TourSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Budget Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TourBudget__c</fullName>
        <label>Tour Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TourDigitalSpendPercent__c</fullName>
        <formula>TourDigitalSpend__c / (LNESpend__c + TourSpend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Digital Spend %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TourDigitalSpend__c</fullName>
        <label>Tour Digital Spend</label>
        <summarizedField>TourCampaignAdPlan__c.AllocatedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>TourCampaignAdPlan__c.TourCampaignType__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TourCampaignAdPlan__c.HasNonLNETourBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TourCampaignAdPlan__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TourName__c</fullName>
        <formula>Tour__r.TourName__c</formula>
        <label>Tour Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TourOtherSpendPercent__c</fullName>
        <formula>TourOtherSpend__c / (LNESpend__c + TourSpend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Other Spend %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TourOtherSpend__c</fullName>
        <label>Tour Other Spend</label>
        <summarizedField>TourCampaignAdPlan__c.AllocatedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>TourCampaignAdPlan__c.TourCampaignType__c</field>
            <operation>equals</operation>
            <value>Misc,Production</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TourCampaignAdPlan__c.HasNonLNETourBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TourCampaignAdPlan__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TourSpend__c</fullName>
        <label>Tour Spend</label>
        <summarizedField>TourCampaignAdPlan__c.AllocatedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>TourCampaignAdPlan__c.HasNonLNETourBudget__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TourCampaignAdPlan__c.AdPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour</label>
        <referenceTo>Tour__c</referenceTo>
        <relationshipLabel>Ad Plans</relationshipLabel>
        <relationshipName>Ad_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VenueOwnership__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office when Owned/Operated</description>
        <label>Venue Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <formula>Event__r.Venue__r.VenueName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxDigitalSpend__c</fullName>
        <formula>(DigitalSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Digital Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNEAdPlanBudget__c</fullName>
        <formula>(LNEAdPlanBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Ad Plan Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNESpend__c</fullName>
        <formula>(LNESpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNonLNEBudget__c</fullName>
        <formula>(NonLNEBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Non-LNE Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNonLNESpend__c</fullName>
        <formula>(NonLNESpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Non-LNE Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxOutdoorSpend__c</fullName>
        <formula>(OutdoorSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Outdoor Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPrintSpend__c</fullName>
        <formula>(PrintSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Print Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProductionMiscellaneousSpend__c</fullName>
        <formula>(ProductionMiscellaneousSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Production/Miscellaneous Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRadioSpend__c</fullName>
        <formula>(RadioSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Radio Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRemainingLNEBudget__c</fullName>
        <formula>(RemainingLNEBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Remaining LNE Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRemainingNonLNEBudget__c</fullName>
        <formula>(RemainingNonLNEBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Remaining Non-LNE Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTelevisionSpend__c</fullName>
        <formula>(TelevisionSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Television Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalLNESpend__c</fullName>
        <formula>(TotalLNESpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total LNE Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTourBudgetRemaining__c</fullName>
        <formula>(TourBudgetRemaining__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Tour Budget Remaining (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTourBudget__c</fullName>
        <formula>(TourBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Tour Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTourDigitalSpend__c</fullName>
        <formula>(TourDigitalSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Tour Digital Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTourOtherSpend__c</fullName>
        <formula>(TourOtherSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Tour Other Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTourSpend__c</fullName>
        <formula>(TourSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Tour Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uiGridVisibility__c</fullName>
        <defaultValue>&quot;|radio=false|digital=false|television=false|print=false|outdoor=false|productionmiscellaneous=false|&quot;</defaultValue>
        <description>Used by Visualforce to determine what grids are visible or not on the Ad Plan Record page (Plan subtab initially)</description>
        <label>uiGridVisibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ad Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>AdPlanName__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyAdPlansInProgress</fullName>
        <columns>NAME</columns>
        <columns>AdPlanName__c</columns>
        <columns>Venue__c</columns>
        <columns>RemainingLNEBudget__c</columns>
        <columns>LNEAdPlanBudget__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Assigned</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Ad Plans In Progress</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Ad Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Plans</pluralLabel>
    <recordTypes>
        <fullName>Local</fullName>
        <active>true</active>
        <description>Local record type designated for marketing plans to a specific region</description>
        <label>Local</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LNE_AdPlanBudget</fullName>
        <active>true</active>
        <description>LNE Ad Plan Budget is required if Event is null</description>
        <errorConditionFormula>ISBLANK(LNEAdPlanBudget__c) &amp;&amp; ISBLANK(Event__c) &amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>LNEAdPlanBudget__c</errorDisplayField>
        <errorMessage>LNE Ad Plan Budget is required if Event is not specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_AdPlanName</fullName>
        <active>true</active>
        <description>Ad Plan Name is required if Event is null</description>
        <errorConditionFormula>ISBLANK(AdPlanName__c) &amp;&amp;  ISBLANK(Event__c)&amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>AdPlanName__c</errorDisplayField>
        <errorMessage>Ad Plan Name is required if Event is not specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EventChildOffice</fullName>
        <active>true</active>
        <description>Checks to see if the user has access to the events office/division. If not, user can not create child records related to the event.</description>
        <errorConditionFormula>!CONTAINS( &apos;,&apos; + $User.OfficeAccess__c + &apos;,&apos;,
&apos;,&apos; + Event__r.Office__r.OfficeID__c + &apos;,&apos;)
&amp;&amp; Event__c &lt;&gt; NULL
&amp;&amp; !$Setup.GeneralSettings__c.GlobalDataAdministrator__c
&amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;

/* Financial Calculator is running and making updates */
!$Setup.GeneralSettings__c.BypassPBFlow__c</errorConditionFormula>
        <errorMessage>You cannot create child records of the event because you do not have authorized access to the events office/division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_ExemptionReasonBlank</fullName>
        <active>true</active>
        <description>If Ad Plan Not Required is not checked and was previously not checked, Exemption Reason must be blank.</description>
        <errorConditionFormula>AdPlanNotRequired__c = FALSE &amp;&amp; PRIORVALUE(AdPlanNotRequired__c) = FALSE &amp;&amp; NOT(ISBLANK(ExemptionReason__c)) &amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>AdPlanNotRequired__c</errorDisplayField>
        <errorMessage>Ad Plan Not Required should be checked or Exemption Reason must be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_ExemptionReasonNotBlank</fullName>
        <active>true</active>
        <description>If Ad Plan Not Required is checked, then Exemption Reason can&apos;t be blank.</description>
        <errorConditionFormula>AdPlanNotRequired__c = TRUE &amp;&amp;  ISBLANK(ExemptionReason__c) &amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>ExemptionReason__c</errorDisplayField>
        <errorMessage>If Ad Plan Not Required is checked, then Exemption Reason is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_StandAloneDate</fullName>
        <active>true</active>
        <description>If ad plan is standalone (not associated with an event), standalone date is required.</description>
        <errorConditionFormula>ISBLANK(Event__c) &amp;&amp; ISBLANK(StandaloneDate__c)&amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>StandaloneDate__c</errorDisplayField>
        <errorMessage>If ad plan is standalone, standalone date is required.</errorMessage>
    </validationRules>
</CustomObject>